# gemini-project-api

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: config.py
app/apis/: api_v1.py  llm.py
app/schemas/: llm.py
app/services/: llm_gemini.py
